2008-01-21  Karl Berry  <karl@gnu.org>

	* info/info.c (main): silently switch to info-stnd if given
	-O (--usage) info.
	Suggestion from Benno, 19 Jan 2008 19:58:47.

2008-01-20  Karl Berry  <karl@gnu.org>

	* install-info/install-info.c (print_help): split up big help string,
	some rewording.

2008-01-19  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_tex): use verbose, not echo, so -q is respected.
	Report from Kurt Hornik, 19 Jan 2008 11:16:27.

2008-01-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Info Directories): mention starting at 0
	and what-cursor-position when figuring column positions.

2008-01-16  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (move_to_dest): compare with filenames, rather
	than cmp -s, since the output file might not actually change.
	Report from Ralf Wildenhues, 15 Jan 2008 07:20:34.

	* doc/texinfo.txi (Invoking makeinfo): --document-language default
	is @documentlanguage, as of 4.11.

	* doc/texinfo.txi (Makeinfo Pointer Creation): mention the 
	need for @detailmenu here, too.

2008-01-14  Karl Berry  <karl@gnu.org>

	* NEWS: install-info NEWS details.

2008-01-13  Bruno Haible  <bruno@clisp.org>

	* util/gendocs.sh (curdate): Execute 'date' command in the locale
	specified by SETLANG.

2008-01-12  Bruno Haible  <bruno@clisp.org>

	* doc/texinfo.txi (Cross Reference Parts): better description of arg2.
	bug-texinfo mail of 12 Jan 2008 15:52:23 +0100.

2008-01-02  Karl Berry  <karl@gnu.org>

	* info/info.c (info_short_help) [__MSDOS__]: puts -b string directly.
	Suggestion from Benno.

2008-01-02  Karl Berry  <karl@tug.org>

	* util/Makefile.am (TESTS): remove dvipdf.test, it is too
	dependent on functional TeX installations.  Not our place to test that.

2008-01-02  Karl Berry  <karl@tug.org>

	* install-info/, install-info/tests/: new subdirectories.
	* util/Makefile.am: move install-info stuff to its own dir, with tests.
	* configure.ac,
	* Makefile.am (SUBDIRS): take care of new dirs.