@@ -1,3 +1,9 @@
+2008-01-23  Karl Berry  <karl@gnu.org>
+
+	* makeinfo/insertion.c (begin_insertion) <direntry>: ignore
+	whitespace beginning a * line inside @direntry.
+	Report from Norbert Preining, 14 Jan 2008 09:09:01.
+
 2008-01-21  Karl Berry  <karl@gnu.org>
 
 	* info/info.c (main): silently switch to info-stnd if given
